--- a/selfstudy-rest/src/main/webapp/remove_project.html
+++ b/selfstudy-rest/src/main/webapp/remove_project.html
@@ -10,9 +10,9 @@
             }
 		</style>
         <script>
-            window.addEventListener("load",initialise,false);
+            window.addEventListener("load", initialize, false);
 
-			function initialise(evt) {
+			function initialize(evt) {
 			    document.getElementById("remove").addEventListener("click", remove, false);
 			    document.getElementById("view").addEventListener("click", view, false);
 			    var id = sessionStorage.getItem("pid");
