--- a/selfstudy-rest/src/main/webapp/create_project.html
+++ b/selfstudy-rest/src/main/webapp/create_project.html
@@ -173,10 +173,10 @@
 						//var search = "/rest/projects/";
 						var index = location.lastIndexOf("/");
 						var id = location.substring(parseInt(index + 1));
-						//sessionStorage.setItem("pid", id);
-						//window.location.href = "view_project.html";
+						sessionStorage.setItem("pid", id);
+						window.location.href = "view_project.html";
 						//alert("Id for new project: " + id);
-    					document.getElementById("result").innerHTML = location;
+    					//document.getElementById("result").innerHTML = location;
 					}
 				    else {
                         //alert("Unexpected response status " + evt.target.status);
