--- a/selfstudy-rest/src/main/webapp/edit_project.html
+++ b/selfstudy-rest/src/main/webapp/edit_project.html
@@ -27,6 +27,7 @@
 			function fetchProject(id) {
 			    var url = "rest/projects";
 				var queryUrl = url + "/" + id;
+				//alert("queryUrl " + queryUrl);
 				var httpRequest = new XMLHttpRequest();
 				httpRequest.open("GET", queryUrl, true);
 				httpRequest.addEventListener("readystatechange", handleFetch, false);
@@ -37,6 +38,7 @@
 			function handleFetch(evt) {
     			if (evt.target.readyState == 4 ) {
     				if(evt.target.status == 200) {
+    				    //alert("Got 200 OK");
     					projectObject = JSON.parse(evt.target.responseText);
     			        viewProject();
     				}
@@ -366,9 +368,75 @@
 			}
 
 			function save(evt) {
-			    alert("Saving ...");
+			    //alert("Saving ...");
 			    // TODO: Decorate projectObject with fields, send to rest service and on success show project list
+                // fetch data
+                var description = document.getElementById("description").value;
+                //alert("description = " + description);
+				var goals = document.getElementById("goals").value;
+				//alert("goals = " + goals);
+				var actions = document.getElementById("actions").value;
+				var start = document.getElementById("start").value;
+				var deadline = document.getElementById("deadline").value;
+				var estimate_id = document.getElementById("estimate").value;
+				//alert("estimate_id = " + estimate_id);
+				var priority_id = document.getElementById("priority").value;
+				var status_id = document.getElementById("status").value;
+				// update project object
+                projectObject.description = description;
+                projectObject.goals = goals;
+                projectObject.actions = actions;
+                projectObject.start = start;
+                projectObject.deadline = deadline;
+                //var estimateObject = new Object();
+                //estimateObject.id = estimate_id;
+                //estimateObject.name = "";
+                //projectObject.estimate = estimateObject;
+                projectObject.estimate.id = estimate_id;
+                //var priorityObject = new Object();
+                //priorityObject.id = priority_id
+                //priorityObject.name = "";
+                //projectObject.priority = priorityObject;
+                projectObject.priority.id = priority_id;
+                //var statusObject = new Object();
+                //statusObject.id = status_id;
+                //statusObject.name = "";
+                //projectObject.status = statusObject;
+                projectObject.status.id = status_id;
+                //projectObject.presupposed = new Array();
+                //projectObject.subsequent = new Array();
+                //projectObject.linkable = new Array();
+                //projectObject.type = "projectDTO"; // Is this needed?
+
+                // write JSON data for debugging
+                document.getElementById("json").innerHTML= JSON.stringify(projectObject, null, 2);
+                // Send to server and view result
+   				var url = "rest/projects/" + projectObject.id;
+   				//alert("PUT to url: " + url);
+				var httpRequest = new XMLHttpRequest();
+				httpRequest.open("PUT", url, true);
+				httpRequest.addEventListener("readystatechange",handleUpdatedProject,false);
+				httpRequest.setRequestHeader("Content-Type", "application/json; charset=utf-8");
+				httpRequest.send(JSON.stringify(projectObject));
 			}
+
+            function handleUpdatedProject(evt) {
+                //alert(evt.target.readyState);
+                if (evt.target.readyState == 4 ) {
+					if(evt.target.status==204) {
+						sessionStorage.setItem("pid", projectObject.id);
+						window.location.href = "view_project.html";
+						//alert("Id for new project: " + id);
+    					//document.getElementById("result").innerHTML = location;
+					}
+				    else {
+                        //alert("Unexpected response status " + evt.target.status);
+                        sessionStorage.setItem("error", "Unexpected response status " + evt.target.status );
+                        //sessionStorage.setItem("error", "Unexpected response status " + evt.target.status + "(" + JSON.stringify(projectObject, null, 2) + ")");
+						window.location.href = "error.html";
+				    }
+				}
+            }
 
         </script>
     </head>
@@ -421,6 +489,6 @@
         <p><button id="save">Save</button></p>
         <p><a href="view_projects.html">View projects</a></p>
         <p><a href="index.html">Home</a></p>
-        <pre id="json"></pre>
+        <pre id="json">&nbsp;</pre>
     </body>
 </html>
