--- a/selfstudy-rest/src/main/webapp/error.html
+++ b/selfstudy-rest/src/main/webapp/error.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Error</title>
-        <link rel="stylesheet" type="text/css" href="style/project.css" >
-        <script>
+<head>
+    <meta charset="UTF-8">
+    <title>Error</title>
+    <link rel="stylesheet" type="text/css" href="style/project.css">
+    <script>
             window.addEventListener("load",initialise,false);
 
 			function initialise(evt) {
@@ -20,11 +20,14 @@
 
 			    document.getElementById("message").innerHTML=message;
 			}
-        </script>
-    </head>
-    <body>
-        <h1>Self study: Error</h1>
-        <p id="message">&nbsp;</p>
-        <p><a href="index.html">Home</a></p>
-    </body>
+
+    </script>
+</head>
+<body>
+<section>
+    <h1>Error</h1>
+    <p id="message">&nbsp;</p>
+    <p><a href="index.html">Home</a></p>
+</section>
+</body>
 </html>
